--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,17 @@
+body {
+	background-color: #a6acec;
+}
+
+.App {
+	max-width: 960px;
+	margin: 0 auto;
+}
+
 .container {
 	text-align: center;
 	font-family: "Poppins", sans-serif;
 }
+
 footer {
 	margin: 30px 0;
 	font-size: 15px;
@@ -9,7 +19,7 @@ footer {
 
 footer a {
 	text-decoration: none;
-	color: #885df1;
+	color: #ace7ef;
 }
 footer a:hover {
 	color: #6d3bed;
