--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,13 @@ body {
 	font-family: "Poppins", sans-serif;
 }
 
+.App h1 {
+	font-size: 75px;
+	font-family: "Monoton", cursive;
+	color: #ace7ef;
+	margin-bottom: 20px;
+}
+
 footer {
 	margin: 30px 0;
 	font-size: 15px;
