--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -14,9 +14,6 @@
 	border-radius: 10px;
 }
 
-h1 {
-	font-size: 75px;
-	font-family: "Monoton", cursive;
-	color: #ace7ef;
-	margin-bottom: 20px;
+.Dictionary h3 {
+	font-size: 20px;
 }
