--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,8 @@ footer a:hover {
 	color: #6d3bed;
 	text-decoration: underline;
 }
+@media (max-width: 900px) {
+	.App h1 {
+		font-size: 50px;
+	}
+}
