--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ body {
 
 .App h1 {
 	font-size: 75px;
+	line-height: 1.5;
 	font-family: "Monoton", cursive;
 	color: #ace7ef;
 	margin-bottom: 20px;
